== 1.0.1

* Major changes

* Minor changes
 * Fixed 'prefix' option on [url].
 * Console methods now accept SQLiss.
 * Admin interface top link moves to page.
 * Fixed a bug in date parsing: links should use contextual timezone.

== 1.0.0 2011-06-15

* Major changes
 * [link] and other url related zafu tags ([form]) *do not typecast to String* by default:
   you need to use <r:link foo='%{baz}'/> for literal values.
 * Created 'uv' brick to support ultraviolet syntax highlighting.
 * Created 'acl' brick to support Access Control Lists.
 * On Skin importation, imports roles from "_roles.yml" file.

* Minor changes
 * Fixed login redirect to not leave ssh.
 * Fixed 'root' scoping and custom urls with mode ('_' in url).
 * Fixed 'host' option for zazen, link and img tags.
 * Fixed [url] method to properly include port number and protocol (https).
 * Improved properties and relations managment interfaces.
 * Improved capistrano tasks on site rename.
 * Fixed a bug where cached_role_ids would not be recalculated on rebuild rebuild.
 * Fixed type_cast bug on Time value.
 * Fixed a bug in 'is_ancestor?' where it would be confused by similar ids.
 * Fixed a bug with 'find(22)' (find by literal zip).
 * Fixed ajax bugs for edge cases ([add] + [drop], etc).
 * Fixed security in ACL when using t_url Ajax.
 * Fixed role importation with prop_eval (validation).
 * Fixed safe_method caching bug on site bootstrapping.

== 1.0.0.rc3 2011-05-26

* Major changes
 * Included tag in xml serialization (tag_names)
 * Added export/import support for Roles/Columns and Relations.
 * Fixed bugs when changing class hierarchy (move rename VirtualClass).
 * Fixed many small bugs and issues (indexing, link date, missed errors, etc).
 * Fixed block edit with ajax ([edit] method).
 * Removed fulltext search (no more MyISAM tables).
 * Fixed SQLiss scoping in queries like "Job:project" (added kpath filter).
 * Fixed Zafu calendar and timezones in dates.